# inkline

./: .gitignore  AGENTS.md  CLAUDE.md  Gemini Dynamic Image Generator (1).json  Gemini Dynamic Image Generator.json  LICENSE  MIGRATION.md  N8N_WORKFLOW_UPDATE.md  README.md  VISUAL_DIRECTION_V2_STATUS.md  corsair_board_deck.py  inkblot-icon-generator-workflow.json  pitch_deck_v2_spec.json  pyproject.toml  test_visual_direction.py
.claude-plugin/: marketplace.json  plugin.json
brand/: BRAND_GUIDELINES.md  render_logos.py
commands/: deck.md  doc.md  setup.md
decks/: claude_code_meetup_draft.md
docs/: ARCHON_AUDIT.md  CLOSED_LOOP_AUDIT_SPEC.md  PITCH.md  TECHNICAL_SPEC.md  USER_GUIDE.md  VISUAL_AUDITOR_SELF_LEARNING_SPEC.md  design_inspiration_analysis.md
examples/: generate_deck_with_ai_backgrounds.py
output/: aigis_investor_deck.json
plan_docs/: EXECUTION_PIVOT_PROGRESS.md  branding-deck-and-assets-spec.md  claude-plugin-spec.md  design-sources-and-philosophy.md  design-system-spec.md  design-tokens-spec.md  document-renderer-spec.md  docx-export-spec.md  execution-engine-and-knowledge-base-pivot-spec.md  gap-closure-spec.md  impeccable-design-intelligence-spec.md  inkline-self-learning-spec.md  inkline-standalone-app-spec.md  llm-agnostic-bridge-spec.md  markdown-authoring-and-live-preview-spec.md  n8n-integration-generative-assets.md  orbital-halo-spec.md  orchestrator.toml  structural-fixes-v0.4-spec.md  two-agent-design-loop-spec.md  vfep-visual-first-exhaustion-spec.md
scripts/: build_pitch_handcrafted.py  build_pitch_llm.py  expand_oauth_scopes.py  gen_aigis_investor_deck.py  generate_corsair_dd_deck.py
tests/: test_brands.py  test_bridge.py  test_document_renderer.py  test_docx.py  test_freeform_renderer.py  test_generative_assets_multimodal.py  test_html.py  test_infographics.py  (+8 more)
(+160 files in other folders)
