[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkline"
version = "0.2.0"
description = "Branded document generation toolkit — Typst, HTML, PDF, PPTX, and Google Slides"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Aaditya Chintalapati" },
]

dependencies = [
    "markdown>=3.5",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
slides = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.1.0",
]
typst = ["typst>=0.13.0"]
charts = ["matplotlib>=3.7.0"]
interactive-charts = ["plotly>=5.0.0"]
intelligence = ["anthropic>=0.25.0"]
app = ["aiohttp>=3.9"]
mcp = ["fastmcp>=2.0"]
all = ["inkline[pdf,slides,typst,charts,interactive-charts,intelligence,app]"]

[project.scripts]
inkline-html = "inkline.html:_cli"
inkline-pdf = "inkline.pdf:_cli"
inkline = "inkline.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inkline"]
